Fix incoherent exclusive data access in ShardingDDLCoordinator

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc5
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0
    • CAR Team 2024-05-13
    • 126
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      There is a _docMutex in the ShardingDDLCoordinatorImpl and most of the codes that access _doc use it, but not all of them. This could cause data race as indicated by the TSAN builds.

            Assignee:
            Wolfee Farkas
            Reporter:
            Wolfee Farkas
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: