SERVER-89935 Fix incoherent exclusive data access in ShardingDDLCoordinator (#21607)

GitOrigin-RevId: de65653d61d08c8902148ee7f25116df261ddb31